# awin

./: AUTHORS  CMakeLists.txt  DEADJOE  Makefile.am  NEWS  README  README-JP-UTF8.md  README-JP-UTF8.txt  README.md  README.txt  awin.c  awin.h  configure  configure.ac  history.txt  mymem.c  mymem.h  mywin.c  mywin.h
man/: CMakeLists.txt  awin.1
src/: CMakeLists.txt  awin.c  awin.h  mymem.c  mymem.h  mywin.c  mywin.h
